--- a/vars.css
+++ b/vars.css
@@ -5,6 +5,7 @@
   --primary-color: #51576d;
   --term-color: #b7bdf8;
   --link-color: #f5a97f;
+  --cmd-title-color: #e38c8f;
 
   --border-radius: 8px;
   /*zob*/
