--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
 
 h1 {
   font-size: 5rem;
-  padding: 0 0 3rem 0;
+  padding: 0 0 2rem 0;
   background: -webkit-linear-gradient(45deg, #3c81c3, var(--gradient-end-dark));
   background-clip: text;
   -webkit-background-clip: text;
@@ -86,6 +86,7 @@ nav {
 
 .terminal{
   width: 100%;
+  min-height: 40vh;
   background-color: var(--term-bg-color);
   padding: 1rem;
   border-radius: var(--border-radius);
@@ -112,7 +113,7 @@ a:hover {
   text-decoration: underline;
 }
 
-.cmd-text {
+.cmd-text, input {
   font-family: 'Fira Code', monospace;
   font-size: 1.2rem;
   font-weight: 300;
@@ -197,6 +198,22 @@ a:hover {
   font-weight: 500;
   color: var(--primary-color-dark);
   font-size: 1rem;
+}
+
+input {
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  color: #f3b7e3;
+  margin-bottom: 0.5rem;
+}
+
+input:hover {
+  border-bottom: 1px solid;
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 1px solid;
 }
 
 @media only screen and (max-width: 768px) {
