--- a/style.css
+++ b/style.css
@@ -1,256 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=JetBrains+Mono:wght@300;500&family=Silkscreen&family=Fira+Code:wght@300;500;700&display=swap');
-@import url(vars.css);
-
 * {
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  background-color: var(--body-bg-color-dark);
+main {
+  animation:colorPulse 5s infinite ease-in-out;
+  background-image:radial-gradient(#040, #111);
+  box-shadow:0 0 5vmin 1vmin #000 inset;
+  box-sizing:border-box;
+  font-family:'Roboto Mono', monospace;
+  font-size:20px;
+  height:100vh;
+  overflow:hidden;
+  padding:10vmin;
+  width:100vw;
 }
 
 main {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.part-title {
-  font-family: 'Silkscreen', sans-serif;
-  color: var(--primary-color-dark);
+main::after {
+  background-image:linear-gradient(transparent, transparent 3px, #222);
+  background-size:4px 4px;
+  bottom:0;
+  content:"";
+  left:0;
+  pointer-events:none;
+  position:absolute;
+  right:0;
+  top:0;
+  z-index:2;
 }
 
-h1 {
-  font-size: 5rem;
-  padding: 0 0 2rem 0;
-  background: -webkit-linear-gradient(45deg, #3c81c3, var(--gradient-end-dark));
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+header {
+  text-align: center;
+  width: 60%;
 }
 
-h2 {
-  font-size: 3rem;
+.header-text {
+  color: #4F5;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.divider {
+  height: 0.5vh;
+  background: #4F5;
+  box-shadow: 0em 0em 0.5em #23824C;
+  width: 60%;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-.sub-text {
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  color: var(--primary-color-dark);
-  font-size: 1.3rem;
-}
-
-.intro {
-  padding: 5rem 0 0 0;
-}
-
-.description {
-  padding: 2rem 0 5rem 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  cursor : pointer;
-}
-
-nav {
-  width: 30%;
+section {
+  width: 60%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  
-  a {
-    font-family: 'Inter', sans-serif;
-    color: var(--primary-color-dark);
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: var(--link-color);
-  }
+  flex-direction: column;
 }
 
-.nav-container {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  height: 5rem;
-  padding-bottom: 2rem;
-}
-
-.terminal{
+.skill-text {
+  color: #4f5;
+  font-size: 2rem;
+  font-weight: bold;
   width: 100%;
-  min-height: 40vh;
-  background-color: var(--term-bg-color);
-  padding: 1rem;
-  border-radius: var(--border-radius);
-  -webkit-border-radius: var(--border-radius);
-  -moz-border-radius: var(--border-radius);
-  -ms-border-radius: var(--border-radius);
-  -o-border-radius: var(--border-radius);
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
-.command:nth-child(1) {
-  margin-top: 1rem;
+.interaction-text {
+  color: #4f5;
+  font-size: 2rem;
+  font-weight: bold;
+  width: 100%;
 }
 
-.command {
-  padding: 0 1rem 1.5rem 1rem;
-
+.interaction-text:hover {
+  background-color: #4f5;
+  color: black;
+  cursor: pointer;
 }
 
-a {
-  color: var(--link-color);
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.cmd-text, input {
-  font-family: 'Fira Code', monospace;
-  font-size: 1.2rem;
-  font-weight: 300;
-  color: #b7bdf8;
-}
-
-.cmd-text {
-  max-width: 100%;
-  word-wrap: normal;
-}
-
-.cmd-base {
-  color: #b7fcaf;
-}
-
-.cmd-base::before {
-  content: '➜ ';
-}
-
-.cmd-elem {
-  color: var(--cmd-elem-color);
-}
-
-.cmd-title {
-  color: var(--cmd-title-color);
-}
-
-.cmd-command {
-  color: #f3b7e3;
-}
-
-.projects {
+.prog-lang {
   display: flex;
   flex-direction: column;
-  padding: 5rem 0 5rem 0;
+  align-items: center;
+  background-color: #11291b;
+  padding: 0.2rem;
 }
 
-.project {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-
-  padding: 1.5rem;
-  margin: 2rem 0 0 0;
-
-  border-radius: var(--border-radius);
-  -webkit-border-radius: var(--border-radius);
-  -moz-border-radius: var(--border-radius);
-  -ms-border-radius: var(--border-radius);
-  -o-border-radius: var(--border-radius);
-  background-color: #303446;
-
-  .project-description {
-    h3 {
-      font-family: 'JetBrains Mono', monospace;
-      font-weight: 300;
-      color: #b7fcaf;
-    }
-  }
-}
-
-.contact-container {
+.progs {
   display: flex;
   flex-direction: row;
-  padding: 2rem 0 5rem 0;
+  align-self: center;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: 2rem;
 }
 
-.contact-item {
-  font-family: 'JetBrains Mono', monospace;
-  margin: 0 1rem 0 0;
-  padding: 1rem;
-  background-color: var(--term-bg-color);
-  border-radius: var(--border-radius);
-  -webkit-border-radius: var(--border-radius);
-  -moz-border-radius: var(--border-radius);
-  -ms-border-radius: var(--border-radius);
-  -o-border-radius: var(--border-radius);
-}
-.footer {
+.soft {
   display: flex;
-  justify-content: center;
-  padding: 2rem 0 2rem 0;
+  flex-direction: row;
+  align-self: center;
+  justify-content: space-between;
+  width: 28%;
+}
+.perc {
+  color:#4f5;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
-.footer p {
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  color: var(--primary-color-dark);
-  font-size: 1rem;
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: none; /* no underline */
 }
 
-input {
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-  color: #f3b7e3;
-  margin-bottom: 0.5rem;
+.project-text {
+  color: #4f5;
+  font-size: 2rem;
+  font-weight: bold;
+  width: 100%;
 }
 
-input:hover {
-  border-bottom: 1px solid;
-}
-
-input:focus {
-  outline: none;
-  border-bottom: 1px solid;
-}
-
-@media only screen and (max-width: 768px) {
-  main {
-    width: 80%;
-  }
-  .nav-container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 10rem;
-  }
-  nav {
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .terminal {
-    width: 100%;
-  }
-  .projects {
-    padding: 5rem 0 0 0;
-  }
-  .contact-container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .contact-item {
-    margin: 0 0 1rem 0;
-  }
-  .footer {
-    padding: 0 0 2rem 0;
-  }
+.interaction-div{
+  margin-top: 1rem;
 }
